Implementing features to the dashboard, changes to the user-item and added fontawesome for Icons

--- a/src/components/User-item/styles.scss
+++ b/src/components/User-item/styles.scss
@@ -16,4 +16,12 @@
     .card-user.card {
         width: 15rem;
     }
+
+    .card-body {
+        text-align: center;
+    }
+}
+
+.form-label{
+    margin-top: 15px;
 }
