--- a/src/pages/Dashboard/styles.scss
+++ b/src/pages/Dashboard/styles.scss
@@ -101,6 +101,11 @@
         #card-users .delete-button{
             margin: 25px 0px 0 195px;
         }
+
+        
+    #card-users .delete-button{
+        margin: 25px 0px 0 12rem;
+    }
     }
 
     #buttons-page {
